Deactivated application link

--- a/index.html
+++ b/index.html
@@ -115,8 +115,8 @@
 				</header>
 				<div class="dark">
 					<p>Applicants must submit pre-proposals, which will undergo review by CINTA, NTH, and NIH 
-						program scientific staff. Pre-proposals are submitted through 
-						<a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer">a simple online application form</a> 
+						program scientific staff. Pre-proposals are submitted through a simple online application form (available soon)
+						<!-- <a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer">a simple online application form</a> -->
 						equivalent to approximately 4 pages.
 					</p>
 					<p>A subset of applicants will be invited to submit full proposals through the same online application system. The full 
@@ -177,9 +177,9 @@
 				<div class="dark">
 					<ul>
 						<li>Pre-proposals must be submitted through the NIH Blueprint MedTech: Incubator Hubs Program online application 
-							system at 
-							<a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer">https://colab.secure-platform.com/a/solicitations/110/home</a> 
-							no later than 11:59 pm ET on March 16, 2023. The goal of projects should be a prototype ready for first-in-human studies.</li>
+							system <!-- at 
+							<a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer">https://colab.secure-platform.com/a/solicitations/119/home</a> 
+							no later than 11:59 pm ET on March 16, 2023. --> will be available on February 16, 2023. The goal of projects should be a prototype ready for first-in-human studies.</li>
 						<li>Applicants will be notified by April 12, 2023, as to whether they are invited to submit a full proposal. 
 							Invitations will be sent by email both to the PI and to the administrative contact listed in the pre-proposal.</li>
 						<li>Invited full proposals must be received by 11:59pm ET on May 9, 2023. Full proposals are also submitted 
@@ -256,7 +256,7 @@
 			<section id="seventh" class="center">
 				<header>
 					<div>
-						<a href="https://colab.secure-platform.com/a/solicitations/119/home" style="margin-bottom: 1em" target="_blank" rel="noopener noreferrer" class="block">Apply Now</a> 
+						<!-- <a href="https://colab.secure-platform.com/a/solicitations/119/home" style="margin-bottom: 1em" target="_blank" rel="noopener noreferrer" class="block">Apply Now</a> -->
 						<a href="faq" target="_blank" rel="noopener noreferrer" class="block">FAQs</a>
 					</div>
 				</header>
