--- a/faq.html
+++ b/faq.html
@@ -145,7 +145,9 @@
 						
           				</ol>
 					
-					<p> Full Proposal FAQs: </p>
+					<header>
+						<h1> Full Proposal FAQs: </h1>
+					</header>
 						<ol>
 							<li><b>The budget has a character limit of up to 500 words and no specific budget template – is there guidance on how it should be created?</b> 
 								Budgets can be presented in a variety of ways, but should aim to describe costs based on milestones summarized per year. If character
