Update details - sync with staging

--- a/index.html
+++ b/index.html
@@ -153,10 +153,10 @@
 				</header>
 				<div class="dark">
 					<p><b>February 16, 2023:</b> Pre-proposal submission opens</p>
-					<p><b>February - March 2023:</b> Informational webinars and Office hours by appointment sign up here: 
-						<a href="https://www.cimit.org/web/center-for-innovative-neurotech-advancement/events" target="_blank" rel="noopener noreferrer">https://www.cimit.org/web/center-for-innovative-neurotech-advancement/events</a> 
+					<p><b>February - March 2023:</b> Informational webinars and Office hours by appointment sign up 
+						<a href="https://www.cimit.org/web/center-for-innovative-neurotech-advancement/events" target="_blank" rel="noopener noreferrer">here</a> 
 					</p>
-					<p><b>March 16, 2023:</b> Pre-proposal Submission deadline</p>
+					<p><b>March 16, 2023:</b> Pre-proposal submission deadline</p>
 					<p><b>April 12, 2023:</b> Submission opens for full proposals from invited pre-proposal applicants</p>
 					<p><b>May 9, 2023:</b> Full proposal submission deadline</p>
 					<p><b>July 2023:</b> Deep Dive Assessment Phase</p>
@@ -177,10 +177,9 @@
 				</header>
 				<div class="dark">
 					<ul>
-						<li>Pre-proposals must be submitted through the NIH Blueprint MedTech: Incubator Hubs Program online application 
-							system at 
-							<a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer">https://colab.secure-platform.com/a/solicitations/119/home</a> 
-							no later than 11:59 pm ET on March 16, 2023. The goal of projects should be a prototype ready for first-in-human studies.</li>
+						<li>Pre-proposals must be submitted through the
+							<a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer"> NIH Blueprint MedTech: Incubator Hubs Program online application 
+							system</a> no later than 11:59 pm ET on March 16, 2023. The goal of projects should be a prototype ready for first-in-human studies.</li>
 						<li>Applicants will be notified by April 12, 2023, as to whether they are invited to submit a full proposal. 
 							Invitations will be sent by email both to the PI and to the administrative contact listed in the pre-proposal.</li>
 						<li>Invited full proposals must be received by 11:59pm ET on May 9, 2023. Full proposals are also submitted 
@@ -218,7 +217,7 @@
 						are encouraged to review the Institutes’ website. For questions about mission fit, contact  the 
 						<a href="https://neuroscienceblueprint.nih.gov/neurotherapeutics/blueprint-medtech/blueprint-medtech-ics-and-contacts" target="_blank" rel="noopener noreferrer">points of contact listed on the Blueprint MedTech website</a> 
 						prior to submitting a pre-proposal and indicate which specific disease is targeted by your product. 
-						<b> All other questions should be submitted to info@blueprintneurotech.org </b>
+						<b> All other questions should be submitted to <a href="mailto:info@blueprintneurotech.org" target="_blank" rel="noopener noreferrer">info@blueprintneurotech.org</a>.</b>
 					</p>
 					<p>Applicants must have collaborative teams incorporating product development and clinical expertise. Input from these collaborators 
 						must be clearly reflected throughout the application and proposed scope of work. CINTA and NTH can assist in connecting potential 
@@ -233,7 +232,7 @@
 						<li>Include data showing that the diagnostic or therapeutic technology has already been demonstrated (proof of concept) with enough confidence 
 							that the remaining challenges are primarily related to building a prototype for first-in-human studies.</li>
 						<li>Propose medical devices with first-of-its-kind technologies, novel intended use, new safety aspects 
-							(typically De Novo, PMA, or possibly 510K requiring clinical data)</li>
+							(typically De Novo, PMA, or possibly 510K requiring clinical data).</li>
 						<li>Propose solutions that are equitable, affordable, and accessible by all clinically relevant communities, 
 							including underserved and vulnerable populations.</li>
 					</ul>
@@ -262,9 +261,9 @@
 					</div>
 				</header>
 				<div class="dark">
-					<p>For Frequently Asked Questions please click 
+					<!-- <p>For Frequently Asked Questions please click 
 							<a href="faq" target="_blank" rel="noopener noreferrer">https://blueprintneurotech.org/faqs</a>.
-					</p>
+					</p>-->
 					<p>To sign up for upcoming webinars, please click 
 						<a href="https://www.cimit.org/web/center-for-innovative-neurotech-advancement/events" target="_blank" rel="noopener noreferrer">here</a>.
 					</p>
