--- a/faq.html
+++ b/faq.html
@@ -32,10 +32,16 @@
 			<section id="header" class="dark center">
 				<header>
 					<img src="images/Blueprint-Medtech_banner.jpg" alt="Blueprint NeuroTech Harbor Banner." class = "responsive">
+					<h4> A recent <a href="https://venturewell.zoom.us/rec/share/-AtGsiK5QdVx34N6KgFnFrf13q_cqLpbBBf4PZnqc74mBBKMH8YTlJe4HifYeQnE.qWbyXKe3jz2q7Vg1" 
+						   target="_blank" rel="noopener noreferrer"> recording</a> and current
+						<a href="https://www.cimit.org/documents/17275339/0/BPWebinar2023_Pre-proposal.pptx/2da9b2c6-cbb0-b2f6-1e36-373a53d606a3?t=1677601910024" 
+						   target="_blank" rel="noopener noreferrer"> slides </a>of the Informational Webinar are available.
+					</h4>
 					<h1>BluePrint MedTech FAQs (updated 2/16/2023)</h1>
 				</header>
 			</section>
-
+				
+			
 		<!-- First -->
 			<section id="first" class="center">
 				<div class="dark">
