Commented out the application link

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 		
 			<section id="navibar" class="topnav">
   				<a class="active">Home</a>
-				<a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer">Apply Now</a>
+				<!-- <a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer">Apply Now</a> -->
 				<a href="faq">FAQs</a>
  				<a href="https://www.cimit.org/web/center-for-innovative-neurotech-advancement/events" target="_blank" rel="noopener noreferrer">Webinars 
 					and Office Hours</a>
@@ -41,8 +41,7 @@
 						mission and interests of the  
 						<a href="https://neuroscienceblueprint.nih.gov/neurotherapeutics/blueprint-medtech/blueprint-medtech-ics-and-contacts" 
 						   target="_blank" rel="noopener noreferrer">participating institutes and centers</a></h3>
-					<h1 style="text-align: center">The current solicitation is open and accepting pre-proposals until March 16th,
-						the next solicitation is expected to be announced in July 2023</h1>
+					<h1 style="text-align: center">The current submission period is over. The next solicitation is expected to be announced in July 2023</h1>
 				</header>
 			</section>
 
@@ -117,7 +116,7 @@
 				<div class="dark">
 					<p>Applicants must submit pre-proposals, which will undergo review by CINTA, NTH, and NIH 
 						program scientific staff. Pre-proposals are submitted through <!--a simple online application form (available soon)-->
-						<a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer">a simple online application form</a> 
+						<!-- <a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer">a simple online application form</a> -->
 						equivalent to approximately 4 pages.
 					</p>
 					<p>A subset of applicants will be invited to submit full proposals through the same online application system. The full 
@@ -177,9 +176,9 @@
 				</header>
 				<div class="dark">
 					<ul>
-						<li>Pre-proposals must be submitted through the
-							<a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer"> NIH Blueprint MedTech: Incubator Hubs Program online application 
-							system</a> no later than 11:59 pm ET on March 16, 2023. The goal of projects should be a prototype ready for first-in-human studies.</li>
+						<li>Pre-proposals must be submitted through the online application
+							<!-- <a href="https://colab.secure-platform.com/a/solicitations/119/home" target="_blank" rel="noopener noreferrer"> NIH Blueprint MedTech: Incubator Hubs Program online application 
+							system</a>--> no later than 11:59 pm ET on March 16, 2023. The goal of projects should be a prototype ready for first-in-human studies.</li>
 						<li>Applicants will be notified by April 12, 2023, as to whether they are invited to submit a full proposal. 
 							Invitations will be sent by email both to the PI and to the administrative contact listed in the pre-proposal.</li>
 						<li>Invited full proposals must be received by 11:59pm ET on May 9, 2023. Full proposals are also submitted 
@@ -256,7 +255,7 @@
 			<section id="seventh" class="center">
 				<header>
 					<div>
-						<a href="https://colab.secure-platform.com/a/solicitations/119/home" style="margin-bottom: 1em" target="_blank" rel="noopener noreferrer" class="block">Apply Now</a>
+						<!-- <a href="https://colab.secure-platform.com/a/solicitations/119/home" style="margin-bottom: 1em" target="_blank" rel="noopener noreferrer" class="block">Apply Now</a> -->
 						<a href="faq" target="_blank" rel="noopener noreferrer" class="block">FAQs</a>
 					</div>
 				</header>
